--- a/190318/190318-fastfoodAPI.css
+++ b/190318/190318-fastfoodAPI.css
@@ -21,7 +21,7 @@
     margin: 7px;
 }
 
-#text-search {
+#txt-search {
     width: 300px;
     height: 30px;
     border: 1px solid #ffecd9;
@@ -52,13 +52,13 @@
     color: #bd5a00;
 }
 
-.#item-template {
+#item-template {
     display: none;
 }
 
 .item {
     padding: 10px 20px;
-    border: 1px solid#d2d2d2;
+    border: 1px solid #d2d2d2;
     border-radius: 14px;
     margin-bottom: 10px;
 }
@@ -87,4 +87,28 @@
     font-size: 14px;
     color: #909090;
     margin-top: 2px;
+}
+
+.paging {
+    text-align: center;
+    margin-top: 23px;
+}
+
+.paging a {
+    text-decoration: none;
+    margin-right: 8px;
+    color: #bd5a00;
+}
+
+.paging a.current {
+    font-weight: bold;
+    color: #ffb500;
+}
+
+.paging a.prev {
+    margin-right: 15px;
+}
+
+.paging a.next {
+    margin-left: 7px;
 }
