--- a/190320 ~ my-trip-advisor/my-trip-advisor/styles/main.css
+++ b/190320 ~ my-trip-advisor/my-trip-advisor/styles/main.css
@@ -23,6 +23,10 @@
     color: #fff;
 }
 
+.ui-datepicker {
+    width: 321px;
+}
+
 html,
 body {
     margin: 0px;
@@ -170,5 +174,81 @@ button:hover {
 }
 
 #search-panel .btn-search img {
+    vertical-align: middle;
+}
+#list-bg {
+    display: none;
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
+    top: 880px;
+    position: absolute;
+}
+
+#list-panel {
+    position: relative;
+    top: 95px;
+    left: 0px;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1100px;
+    margin-bottom: 100px;
+}
+
+#list-item-template {
+    display: none;
+}
+
+.list-item {
+    position: relative;
+    display: inline-block;
+    width: 344px;
+    margin-right: 24px;
+    margin-bottom: 22px;
+}
+
+.list-item:hover {
+    cursor: pointer;
+}
+
+.list-item:nth-of-type(3n) {
+    margin-right: 0px;
+}
+
+.list-item-image {
+    display: block;
+    width: 344px;
+    height: 210px;
+}
+
+.list-item-desc {
+    border: 1px solid #eee;
+    border-top: 0px;
+}
+
+.list-item-name {
+    height: 24px;
+    padding-left: 13px;
+    padding-top: 13px;
+    font-size: 17px;
+    font-weight: bold;
+}
+
+.list-item-city {
+    height: 20px;
+    padding-bottom: 8px;
+    padding-left: 13px;
+    line-height: 16px;
+}
+
+.list-item-city img {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.list-item-city-name {
+    display: inline-block;
+    font-size: 14px;
     vertical-align: middle;
 }
