main image zoom version 2

--- a/190322/main.css
+++ b/190322/main.css
@@ -69,19 +69,10 @@ td {
     background-color: #fafafa;
 }
 
-.img-zoom-container {
-    position: relative;
-}
-
-.img-zoom-lens {
-    position: absolute;
-    border: 1px solid #d4d4d4;
-    width: 80px;
-    height: 80px;
-}
-
-.img-zoom-result {
-    border: 1px solid #d4d4d4;
+.drift-open {
     width: 400px;
     height: 400px;
+    position: absolute;
+    top: 10px;
+    left: 400px;
 }
