--- a/190322/main.css
+++ b/190322/main.css
@@ -74,5 +74,21 @@ td {
     height: 400px;
     position: absolute;
     top: 10px;
-    left: 400px;
+    left: 450px;
+}
+
+#rate {
+    padding-top: 50px;
+}
+
+#MoreDetailBtn {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-top: 50px;
+}
+
+.body-1-2-Image {
+    height: 1200px;
+    overflow: hidden;
 }
